--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-Privacy policy
+<h1>Privacy policy</h1>
 Busli with its websites, games and other applications (hereinafter referred to as "we", "our", "ours", "us", "to us") has a strong belief in the extreme importance of the user confidentiality. Privacy policy (hereinafter – "Policy") covers the relation to personal information and other data received by us from users by means of our websites, games and other applications ("Websites/ Applications"), to their use and a possibility of disclosure of such data to the third parties. Installation and/or use of such Websites / Applications and/or providing similar information to us means acceptance of the Policy conditions by the user and consent to the provided information processing (personal and general) according to this Policy. The policy came into force on 31 March 2020. The user information obtained by us by means of Websites/Applications belongs to one of the two types:
 
 1."Personal information" – the information which identifies a particular user the personality allowing to contact him on the Internet and offline such as: full name, current address, email address, phone number, photo, exact geolocation (i.e. exact location), player ID, credit card data and in some cases the name of the account.
